[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diengmf"]

[project]
name = "diengmf"
version = "0.1.0"
dependencies = [
    "jax[cuda]<0.7.0",
    "jaxtyping",
    "beartype",
    "equinox",
    "optax",
    "diffrax",
    "distrax",
    "matplotlib",
    "tensorflow_probability",
    "distreqx",
    "tqdm",
    "pandas",
    "jupyter",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "pyflakes"]

[tool.mypy]
python_executable = ".direnv/python-3.11.11/bin/python"
disable_error_code = ["import-untyped"]

[tool.flake8]
extend-ignore = ["F722"]

[tool.pylsp]
plugins.pyflakes.ignore = ["F722"]
